k8s-prod-01/paperless/paperless.statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: paperless
  labels:
    kubernetes.io/app: paperless
spec:
  selector:
    matchLabels:
      app: paperless
  serviceName: "paperless"
  replicas: 1
  template:
    metadata:
      labels:
        app: paperless
    spec:
      containers:
        - image: ghcr.io/paperless-ngx/paperless-ngx:1.9.2
          name: paperless
          imagePullPolicy: "IfNotPresent"
          resources:
            requests:
              memory: "2Gi"
            limits:
              memory: "4Gi"
          readinessProbe:
            httpGet:
              path: /
              port: 8000
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: data
              mountPath: /usr/src/paperless/data
            - name: media
              mountPath: /usr/src/paperless/media
            - name: consume
              mountPath: /usr/src/paperless/consume
      volumes:
        - name: consume
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 20Gi
    - metadata:
        name: media
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 20Gi
