k8s-prod-01/paperless/paperless.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
  name: paperless
spec:
  ingressClassName: nginx
  rules:
    - host: paperless.frickel.earth
      http:
        paths:
          - backend:
              service:
                name: paperless
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - paperless.frickel.earth
      secretName: wildcard.frickel.earth-prod
